# PastelariaVinny_Navegantes

./: .gitignore  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
data/raw/ocr_results/pix/: pix (1)_data.json  pix (1)_data.txt  pix (10)_data.json  pix (10)_data.txt  pix (11)_data.json  pix (11)_data.txt  pix (12)_data.json  pix (12)_data.txt  pix (13)_data.json  pix (13)_data.txt  pix (14)_data.json  pix (14)_data.txt  pix (15)_data.json  pix (15)_data.txt  pix (16)_data.json  pix (16)_data.txt  pix (17)_data.json  pix (17)_data.txt  pix (18)_data.json  pix (18)_data.txt  pix (19)_data.json  pix (19)_data.txt  pix (2)_data.json  pix (2)_data.txt  pix (20)_data.json  pix (20)_data.txt  pix (21)_data.json  pix (21)_data.txt  pix (3)_data.json  pix (3)_data.txt  pix (4)_data.json  pix (4)_data.txt  pix (5)_data.json  pix (5)_data.txt  pix (6)_data.json  pix (6)_data.txt  pix (7)_data.json  pix (7)_data.txt  pix (8)_data.json  pix (8)_data.txt  (+3 more)
notebooks/: analise.ipynb
outputs/reports/: transacoes_credito copy.csv  transacoes_pix copy.csv
outputs/reports/agosto/credito/: relatorio_estatisticas.txt  transacoes_consolidadas.csv
outputs/reports/agosto/debito/: relatorio_estatisticas.txt  transacoes_consolidadas.csv
outputs/reports/agosto/pix/: relatorio_estatisticas.txt  transacoes_consolidadas.csv
outputs/reports/setembro/: transacoes_credito.csv  transacoes_debito.csv  transacoes_pix.csv
scripts/: automaticCropDivide.py  extract_raw_text.py  iniciar_dashboard_streamlit.py  jsonPix_to_csv_converter.py  json_to_csv_converter.py  txt_to_csv.py
src/: __init__.py
src/analise/: analise.ipynb
src/ocr/: card_transactions_ocr.py  structured_ocr.py
src/vendas/: dashboard_simples.py  dashboard_streamlit.py  dashboard_vendas.py
tools/: setup_tesseract.py
(+38 files in other folders)
